Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/091_function_missing_return_while_simple.xi
f(x:bool):int
{
    while x {
    }
}
//@PRACOWNIA
//@should_not_typecheck
